minor ed cls2 lobjs

--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -57,7 +57,7 @@ By the end of the chapter, readers will be able to do the following:
 - Describe what a random seed is and its importance in reproducible data analysis.
 - Set the random seed in R using the `set.seed` function.
 - Describe and interpret accuracy, precision, recall, and confusion matrices.
-- Evaluate classification accuracy, precision, and recall in R using a test set, a single validation set, or cross-validation.
+- Evaluate classification accuracy, precision, and recall in R using a test set, a single validation set, and cross-validation.
 - Produce a confusion matrix in R.
 - Choose the number of neighbors in a K-nearest neighbors classifier by maximizing estimated cross-validation accuracy.
 - Describe the advantages and disadvantages of the K-nearest neighbors classification algorithm.
