reg1 reg2 learning objs

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -63,13 +63,13 @@ however that is beyond the scope of this book.
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to do the following:
 
-* Recognize situations where a simple regression analysis would be appropriate for making predictions.
+* Recognize situations where a regression analysis would be appropriate for making predictions.
 * Explain the K-nearest neighbors (K-NN) regression algorithm and describe how it differs from K-NN classification.
 * Interpret the output of a K-NN regression.
-* In a data set with two or more variables, perform K-nearest neighbors regression in R using a `tidymodels` workflow.
-* Execute cross-validation in R to choose the number of neighbors.
-* Evaluate K-NN regression prediction accuracy in R using a test data set and the root mean squared prediction error (RMSPE).
-* In the context of K-NN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
+* In a data set with two or more variables, perform K-nearest neighbors regression in R.
+* Evaluate K-NN regression prediction quality in R using the root mean squared prediction error (RMSPE).
+* Estimate the RMSPE in R using cross-validation or a test set.
+* Choose the number of neighbors in K-nearest neighbors regression by minimizing estimated cross-validation RMSPE.
 * Describe the advantages and disadvantages of K-nearest neighbors regression.
 
 ## The regression problem
