--- a/source/clustering.Rmd
+++ b/source/clustering.Rmd
@@ -65,14 +65,12 @@ By the end of the chapter, readers will be able to do the following:
 and what insight it might extract from the data.
 * Explain the K-means clustering algorithm.
 * Interpret the output of a K-means analysis.
-* Differentiate between clustering and classification.
-* Identify when it is necessary to scale variables before clustering,
-and do this using R.
+* Differentiate between clustering, classification, and regression.
+* Identify when it is necessary to scale variables before clustering, and do this using R.
 * Perform K-means clustering in R using `tidymodels` workflows.
 * Use the elbow method to choose the number of clusters for K-means.
 * Visualize the output of K-means clustering in R using colored scatter plots.
-* Describe the advantages,
-limitations and assumptions of the K-means clustering algorithm.
+* Describe the advantages, limitations and assumptions of the K-means clustering algorithm.
 
 ## Clustering
 Clustering \index{clustering} is a data analysis technique
