--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -31,13 +31,9 @@ By the end of the chapter, readers will be able to do the following:
     - bar plots
     - histogram plots
 - Given a data set and a question, select from the above plot types and use R to create a visualization that best answers the question.
-- Given a visualization and a question, evaluate the effectiveness of the visualization and suggest improvements to better answer the question.
+- Evaluate the effectiveness of a visualization and suggest improvements to better answer a given question.
 - Referring to the visualization, communicate the conclusions in non-technical terms.
 - Identify rules of thumb for creating effective visualizations.
-- Define the three key aspects of ggplot objects:
-    - aesthetic mappings
-    - geometric objects
-    - scales
 - Use the `ggplot2` package in R to create and refine the above visualizations using:
     - geometric objects: `geom_point`, `geom_line`, `geom_histogram`, `geom_bar`, `geom_vline`, `geom_hline`
     - scales: `xlim`, `ylim`
@@ -45,6 +41,10 @@ By the end of the chapter, readers will be able to do the following:
     - labeling: `xlab`, `ylab`, `labs`
     - font control and legend positioning: `theme`
     - subplots: `facet_grid`
+- Define the three key aspects of `ggplot2` objects:
+    - aesthetic mappings
+    - geometric objects
+    - scales
 - Describe the difference in raster and vector output formats.
 - Use `ggsave` to save visualizations in `.png` and `.svg` format.
 
