--- a/source/wrangling.Rmd
+++ b/source/wrangling.Rmd
@@ -26,28 +26,23 @@ By the end of the chapter, readers will be able to do the following:
   - Define what vectors, lists, and data frames are in R, and describe how they relate to
     each other.
   - Describe the common types of data in R and their uses.
-  - Recall and use the following functions for their
-    intended data wrangling tasks:
-      - `across`
+  - Use the following functions for their intended data wrangling tasks:
       - `c`
-      - `filter`
-      - `group_by`
-      - `select`
-      - `map`
-      - `mutate`
-      - `pull`
       - `pivot_longer`
       - `pivot_wider`
-      - `rowwise`
       - `separate`
+      - `select`
+      - `filter`
+      - `mutate`
       - `summarize`
-  - Recall and use the following operators for their
-    intended data wrangling tasks:
-      - `==`
+      - `map`
+      - `group_by`
+      - `across`
+      - `rowwise`
+  - Use the following operators for their intended data wrangling tasks:
+      - `==`, `!=`, `<`, `<=`, `>`, and `>=`
       - `%in%`
-      - `!`
-      - `&`
-      - `|`
+      - `!`, `&`, and `|`
       - `|>` and `%>%`
 
 ## Data frames, vectors, and lists
