--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -1273,7 +1273,7 @@ The overall workflow for performing K-nearest neighbors classification using `ti
 In these last two chapters, we focused on the K-nearest neighbors algorithm,
 but there are many other methods we could have used to predict a categorical label.
 All algorithms have their strengths and weaknesses, and we summarize these for
-the $K$-NN here.
+the K-NN here.
 
 **Strengths:** K-nearest neighbors classification
 
@@ -1329,7 +1329,7 @@ cancer_irrelevant |>
       select(Class, Smoothness, Concavity, Perimeter, Irrelevant1, Irrelevant2)
 ```
 
-Next, we build a sequence of $K$-NN classifiers that include `Smoothness`,
+Next, we build a sequence of K-NN classifiers that include `Smoothness`,
 `Concavity`, and `Perimeter` as predictor variables, but also increasingly many irrelevant
 variables. In particular, we create 6 data sets with 0, 5, 10, 15, 20, and 40 irrelevant predictors.
 Then we build a model, tuned via 5-fold cross-validation, for each data set.
@@ -1485,7 +1485,7 @@ In particular, you
 2. tune each one using cross-validation, and
 3. pick the subset of predictors that gives you the highest cross-validation accuracy.
 
-Best subset selection is applicable to any classification method ($K$-NN or otherwise).
+Best subset selection is applicable to any classification method (K-NN or otherwise).
 However, it becomes very slow when you have even a moderate
 number of predictors to choose from (say, around 10). This is because the number of possible predictor subsets
 grows very quickly with the number of predictors, and you have to train the model (itself
@@ -1584,7 +1584,7 @@ one over increasing predictor set sizes
 and another to check which predictor to add in each round (where you see `for (j in 1:length(names))` below).
 For each set of predictors to try, we construct a model formula,
 pass it into a `recipe`, build a `workflow` that tunes
-a $K$-NN classifier using 5-fold cross-validation,
+a K-NN classifier using 5-fold cross-validation,
 and finally records the estimated accuracy.
 
 ```{r 06-fwdsel-2-seed, warning = FALSE, echo = FALSE, message = FALSE}
