--- a/source/classification2.Rmd
+++ b/source/classification2.Rmd
@@ -1154,10 +1154,10 @@ we set the number of neighbors $K$ to 1, 7, 20, and 300.
 
 ### Evaluating on the test set
 
-Now that we have tuned the KNN classifier and set $K =$ `r best_k`,
+Now that we have tuned the K-NN classifier and set $K =$ `r best_k`,
 we are done building the model and it is time to evaluate the quality of its predictions on the held out
 test data, as we did earlier in Section \@ref(eval-performance-cls2).
-We first need to retrain the KNN classifier
+We first need to retrain the K-NN classifier
 on the entire training data set using the selected number of neighbors.
 
 ```{r 06-eval-on-test-set-after-tuning, message = FALSE, warning = FALSE}
