--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -37,16 +37,16 @@ populations and then introduce two common techniques in statistical inference:
 ## Chapter learning objectives
 By the end of the chapter, readers will be able to do the following:
 
-* Describe real-world examples of questions that can be answered with statistical inference.
-* Define common population parameters (e.g., mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
-* Define the following statistical sampling terms: population, sample, population parameter, point estimate, and sampling distribution.
-* Explain the difference between a population parameter and a sample point estimate.
-* Use R to draw random samples from a finite population.
-* Use R to create a sampling distribution from a finite population.
-* Describe how sample size influences the sampling distribution.
-* Define bootstrapping.
-* Use R to create a bootstrap distribution to approximate a sampling distribution.
-* Contrast the bootstrap and sampling distributions.
+- Describe real-world examples of questions that can be answered with statistical inference.
+- Define common population parameters (e.g., mean, proportion, standard deviation) that are often estimated using sampled data, and estimate these from a sample.
+- Define the following statistical sampling terms: population, sample, population parameter, point estimate, and sampling distribution.
+- Explain the difference between a population parameter and a sample point estimate.
+- Use R to draw random samples from a finite population.
+- Use R to create a sampling distribution from a finite population.
+- Describe how sample size influences the sampling distribution.
+- Define bootstrapping.
+- Use R to create a bootstrap distribution to approximate a sampling distribution.
+- Contrast the bootstrap and sampling distributions.
 
 ## Why do we need sampling?
 We often need to understand how quantities we observe in a subset
