move citation out of caption for pdf build sync with python

--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -1160,9 +1160,9 @@ of accessing data through an API in this book, with the hope that it gives you e
 idea that you can learn how to use another API if needed.  In particular, in this book we will show you the basics
 of how to use the `httr2` package in R\index{API!httr2}\index{httr2}\index{NASA} to access data from the NASA "Astronomy Picture
 of the Day" API (a great source of desktop backgrounds, by the way&mdash;take a look at the stunning
-picture of the Rho-Ophiuchi cloud complex in Figure \@ref(fig:NASA-API-Rho-Ophiuchi) from July 13, 2023!).
+picture of the Rho-Ophiuchi cloud complex [@rhoophiuchi] in Figure \@ref(fig:NASA-API-Rho-Ophiuchi) from July 13, 2023!).
 
-(ref:NASA-API-Rho-Ophiuchi) The James Webb Space Telescope's NIRCam image of the Rho Ophiuchi molecular cloud complex [@rhoophiuchi].
+(ref:NASA-API-Rho-Ophiuchi) The James Webb Space Telescope's NIRCam image of the Rho Ophiuchi molecular cloud complex.
 
 ```{r NASA-API-Rho-Ophiuchi, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "(ref:NASA-API-Rho-Ophiuchi)", fig.retina = 2, out.width="60%"}
 knitr::include_graphics("img/reading/NASA-API-Rho-Ophiuchi.png")
