--- a/source/intro.Rmd
+++ b/source/intro.Rmd
@@ -590,7 +590,7 @@ Canadian Residents)" would be much more informative.
 Adding additional layers \index{plot!layers} to our visualizations that we create in `ggplot` is
 one common and easy way to improve and refine our data visualizations. New
 layers are added to `ggplot` objects using the `+` symbol. For example, we can
-use the `xlab` (short for x axis label) and `ylab` (short for y axis label) functions
+use the `xlab` (short for x axis label) \index{ggplot!xlab} and `ylab` (short for y axis label) \index{ggplot!ylab} functions
 to add layers where we specify meaningful
 and informative labels for the x and y axes. \index{plot!axis labels} Again, since we are specifying
 words (e.g. `"Mother Tongue (Number of Canadian Residents)"`) as arguments to
