--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -241,7 +241,7 @@ We see that there are two columns in the `co2_df` data frame; `date_measured` an
 The `date_measured` column holds the date the measurement was taken,
 and is of type `date`.
 The `ppm` column holds the value of CO$_{\text{2}}$ in parts per million
-that was measured on each date, and is type `double`.
+that was measured on each date, and is type `double`.\index{dates and times}
 
 > **Note:** `read_csv` was able to parse the `date_measured` column into the
 > `date` vector type because it was entered
@@ -1225,9 +1225,9 @@ admirable job given the technology available at the time.
 When you create a histogram in R, the default number of bins used is 30.
 Naturally, this is not always the right number to use.
 You can set the number of bins yourself by using
-the `bins` argument in the `geom_histogram` geometric object.
+the `bins` argument in the `geom_histogram` geometric object. \label{ggplot!bins}
 You can also set the *width* of the bins using the
-`binwidth` argument in the `geom_histogram` geometric object.
+`binwidth` argument in the `geom_histogram` geometric object. \label{ggplot!binwidth}
 But what number of bins, or bin width, is the right one to use?
 
 Unfortunately there is no hard rule for what the right bin number
