jupyter vsnctl idcs

--- a/source/jupyter.Rmd
+++ b/source/jupyter.Rmd
@@ -377,7 +377,7 @@ right-clicking on the file's name in the Jupyter file explorer, selecting
 **Open with**, and then selecting **Editor** (Figure \@ref(fig:open-data-w-editor-1)).
 Suppose you do not specify to open
 the data file with an editor. In that case, Jupyter will render a nice table
-for you, and you will not be able to see the column delimiters, and therefore
+for you, and you will not be able to see the column delimiters, \index{delimiter} and therefore
 you will not know which function to use, nor which arguments to use and values
 to specify for them.
 
