--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -61,7 +61,7 @@ exactly right! To keep things simple, we instead recommend that you install
 [Docker](https://docker.com). Docker lets you run your Jupyter notebooks inside
 a pre-built *container* that comes with precisely the right versions of
 all software packages needed run the worksheets that come with this book.
-\index{Docker}
+\index{Docker}\index{container}
 
 > **Note:** A *container* is a virtualized user space within your computer.
 > Within the container, you can run software in isolation without interfering with the
@@ -77,6 +77,7 @@ all software packages needed run the worksheets that come with this book.
 visit [the online Docker documentation](https://docs.docker.com/desktop/install/windows-install/),
 and download the `Docker Desktop Installer.exe` file. Double-click the file to open the installer
 and follow the instructions on the installation wizard, choosing **WSL-2** instead of **Hyper-V** when prompted.
+\index{Docker!installation}
 
 > **Note:** Occasionally, when you first run Docker on Windows, you will encounter an error message. Some common errors you may see:
 >
@@ -90,7 +91,7 @@ and follow the instructions on the installation wizard, choosing **WSL-2** inste
 >   to help you with this, as editing the BIOS can be dangerous. Detailed instructions for doing this are beyond the scope of this book.
 
 **Running JupyterLab** Run Docker Desktop. Once it is running, you need to download and run the
-Docker *image* that we have made available for the worksheets (an *image* is like a "snapshot" of a
+Docker *image* that \index{Docker!image}\index{Docker!tag} we have made available for the worksheets (an *image* is like a "snapshot" of a
 computer with all the right packages pre-installed). You only need to do this step one time; the image will remain
 the next time you run Docker Desktop.
 In the Docker Desktop search bar, enter `ubcdsci/r-dsci-100`, as this is
@@ -177,7 +178,8 @@ sudo chmod u+x get-docker.sh
 sudo sh get-docker.sh
 ```
 
-**Running JupyterLab** First, open the [`Dockerfile` in the worksheets repository](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/Dockerfile),
+**Running JupyterLab** First, open
+the [`Dockerfile` in the worksheets repository](https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/Dockerfile),
 and look for the line `FROM ubcdsci/r-dsci-100:` followed by a tag consisting of a sequence of numbers and letters.
 Then in the terminal, navigate to the directory where you want to run JupyterLab, and run
 the following command, replacing `TAG` with the *tag* you found earlier.
