--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -270,7 +270,7 @@ We first group the data by the `replicate` variable&mdash;to group the
 set of listings in each sample together&mdash;and then use `summarize`
 to compute the proportion in each sample.
 We print both the first and last few entries of the resulting data frame
-below to show that we end up with 20,000 point estimates, one for each of the 20,000 samples.
+below to show that we end up with 20,000 point estimates, one for each of the 20,000 samples.\index{group\_by}\index{summarize}
 
 ```{r 11-example-proportions6, echo = TRUE, message = FALSE, warning = FALSE}
 sample_estimates <- samples |>
@@ -381,7 +381,7 @@ one_sample <- airbnb |>
 
 We can create a histogram to visualize the distribution of observations in the
 sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean
-of our sample.
+of our sample.\index{ggplot!geom\_histogram}
 
 ```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Distribution of price per night (dollars) for sample of 40 Airbnb listings.", fig.height = 3.5, fig.width = 4.5}
 sample_distribution <- ggplot(one_sample, aes(price)) +
@@ -1116,6 +1116,7 @@ To calculate a 95\% percentile bootstrap confidence interval, we will do the fol
 
 To do this in R, we can use the `quantile()` function. Quantiles are expressed in proportions rather than
 percentages, so the 2.5th and 97.5th percentiles would be the 0.025 and 0.975 quantiles, respectively.
+\index{percentile}
 \index{quantile}
 \index{pull}
 \index{select}
