--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -85,7 +85,7 @@ another example, we could try to use the size of a house to
 predict its sale price. Both of these response variables&mdash;race time and sale price&mdash;are
 numerical, and so predicting them given past data is considered a regression problem.
 
-Just like in the \index{classification!comparison to regression}
+Just like in the \index{classification!comparison to regression}\index{regression!comparison to classification}
 classification setting, there are many possible methods that we can use
 to predict numerical response variables. In this chapter we will
 focus on the **K-nearest neighbors** algorithm [@knnfix; @knncover], and in the next chapter
