--- a/source/regression2.Rmd
+++ b/source/regression2.Rmd
@@ -706,7 +706,7 @@ lm_plot_outlier_large
 ### Multicollinearity
 
 The second, and much more subtle, issue can occur when performing multivariable
-linear regression.  In particular, if you include multiple predictors that are \index{colinear}\index{multicolinear|see{colinear}}
+linear regression.  In particular, if you include multiple predictors that are \index{multicollinearity}
 strongly linearly related to one another, the coefficients that describe the
 plane of best fit can be very unreliable&mdash;small changes to the data can
 result in large changes in the coefficients. Consider an extreme example using
