bugfix index cls1

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -1329,7 +1329,7 @@ data.  So how can we perform K-nearest neighbors classification in the presence
 of missing data?  Well, since there are not too many observations with missing
 entries, one option is to simply remove those observations prior to building
 the K-nearest neighbors classifier. We can accomplish this by using the
-`drop_na` function from `tidyverse` prior to working with the data.\label{missing data!drop\_na}
+`drop_na` function from `tidyverse` prior to working with the data.\index{missing data!drop\_na}
 
 ```{r 05-naomit}
 no_missing_cancer <- missing_cancer |> drop_na()
