--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -1225,9 +1225,9 @@ admirable job given the technology available at the time.
 When you create a histogram in R, the default number of bins used is 30.
 Naturally, this is not always the right number to use.
 You can set the number of bins yourself by using
-the `bins` argument in the `geom_histogram` geometric object. \label{ggplot!bins}
+the `bins` argument in the `geom_histogram` geometric object. \index{ggplot!bins}
 You can also set the *width* of the bins using the
-`binwidth` argument in the `geom_histogram` geometric object. \label{ggplot!binwidth}
+`binwidth` argument in the `geom_histogram` geometric object. \index{ggplot!binwidth}
 But what number of bins, or bin width, is the right one to use?
 
 Unfortunately there is no hard rule for what the right bin number
