--- a/source/reading.Rmd
+++ b/source/reading.Rmd
@@ -1262,7 +1262,7 @@ the `httr2` package, and construct the query using the `request` function, which
 you will recognize the same query URL that we pasted into the browser earlier.
 We will then send the query using the `req_perform` function, and finally
 obtain a JSON representation of the response using the `resp_body_json` function.
-\index{httr2!req_perform}\index{httr2!resp_body_json}
+\index{httr2!req\_perform}\index{httr2!resp\_body\_json}
 
 <!-- we have disabled the below code for reproducibility, with hidden setting
 of the nasa_data object. But you can reproduce this using the DEMO_KEY key -->
