--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -774,7 +774,7 @@ To change the color palette,
 we add the `scale_color_brewer` layer indicating the palette we want to use.
 You can use
 this [color blindness simulator](https://www.color-blindness.com/coblis-color-blindness-simulator/) to check
-if your visualizations \index{color palette!color blindness simulator}
+if your visualizations \index{color blindness simulator}
 are color-blind friendly.
 Below we pick the `"Set2"` palette, with the result shown
 in Figure \@ref(fig:scatter-color-by-category-palette).
